--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,7 +5,7 @@
             <div class="container py-5">
                 <div class="row h-100 align-items-center py-5">
                     <div class="col-lg-6">
-                        <h1 class="display-4">About us page</h1>
+                        <h1 class="display-4"> About us Page </h1>
                         <p class="lead text-muted mb-0">Create a minimal about us page using Bootstrap 4.</p>
                         <p class="lead text-muted">Snippet by <a href="https://bootstrapious.com/snippets"
                                 class="text-muted">
@@ -19,7 +19,7 @@
             </div>
         </div>
 
-        <div class="bg-white py-5">
+        <div class="bg-white py-6">
             <div class="container py-5">
                 <div class="row align-items-center mb-5">
                     <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
