--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,14 +31,14 @@
             <div class="form-outline mb-4">
               <input type="email" id="form3Example3" class="form-control form-control-lg"
                 placeholder="Enter a valid email address" />
-              <label class="form-label" for="form3Example3">Email address</label>
+              <label class="form-label" for="form3Example3"> Email Address </label>
             </div>
   
             <!-- Password input -->
             <div class="form-outline mb-3">
               <input type="password" id="form3Example4" class="form-control form-control-lg"
                 placeholder="Enter password" />
-              <label class="form-label" for="form3Example4">Password</label>
+              <label class="form-label" for="form3Example4"> Password </label>
             </div>
   
             <div class="d-flex justify-content-between align-items-center">
@@ -49,14 +49,14 @@
                   Remember me
                 </label>
               </div>
-              <a href="#!" class="text-body">Forgot password?</a>
+              <a href="#!" class="text-body"> Forgot Password </a>
             </div>
   
             <div class="text-center text-lg-start mt-4 pt-2">
               <button type="button" class="btn btn-primary btn-lg"
-                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-              <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="/register"
-                  class="link-danger">Register</a></p>
+                style="padding-left: 2.5rem; padding-right: 2.5rem;"> Sign in </button>
+              <p class="small fw-bold mt-2 pt-1 mb-0"> New to KIT-HEALTH ? <a href="/register"
+                  class="link-danger"> Register </a></p>
             </div>
   
           </form>
