--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header"); -%>
 <div class="home">
-<h1>Home</h1>
+<h1> Home Page </h1>
 </div>
 
 <%- include("partials/footer"); -%>
