sign up button update

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -61,7 +61,7 @@
 
         <div class="text-end">
           <button type="button"class="btn btn-light text-dark me-2"><a href="/login">Login</a></button>
-          <button type="button" class="btn btn-primary"><a href="/register">Sign-up</a></button>
+          <button type="button" class="btn btn-light"><a href="/register">Sign-up</a></button>
         </div>
       </div>
     </div>
