--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header"); -%>
 <div class="home">
-
+    <body style="background-image: url('img1.jpg');">
         <h1>Home</h1>
     
 
