more changs in ui

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,8 @@
 <%- include("partials/header"); -%>
 <div class="home">
-    <body style="background-image: url('img1.jpg');">
+    <video autoplay muted loop id="bg-video">
+        <source src="med.mp4" type="video/mp4">
+      </video>
         <h1>Home</h1>
     
 
