--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,3 +18,13 @@ header{
     background-color: #8fbddc;
 }
 
+#bg-video {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: -1;
+  }
+  
