--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@
 	bottom: 0;
 	width: 100%;
 	height: 60px;
-	background-color: #8fbddc;
+	background-color: #7A78FC;
 }
 header{
     background-color: #d1e8f8;
