--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="https://kit.fontawesome.com/8286c5a5fc.css" crossorigin="anonymous"> 
+  
   <link rel="stylesheet" href="/css/styles.css">
   <header>
     <div class="px-3 py-2 top-bar">
@@ -24,16 +25,14 @@
               </a>
             </li>
             <li>
-              <a href="/about">
-              <a href="#" class="nav-link text-white">
+              <a href="/about" class="nav-link text-white">
                 
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#speedometer2"></use></svg>
                 About us
               </a>
             </li>
-          </a>
             <li>
-              <a href="#" class="nav-link text-white">
+              <a href="/services" class="nav-link text-white">
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#grid"></use></svg>
                 Services
               </a>
