--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,12 +1,13 @@
-
+<%- include("partials/header"); -%>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
 <section class="section services-section" id="services">
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
                 <div class="section-title">
-                    <h2>Our Services</h2>
-                    <p>Explore our wide range of services to protect your family</p>
+                    <h2>What I Do</h2>
+                    <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites</p>
                 </div>
             </div>
         </div>
@@ -15,53 +16,11 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa-regular fa-prescription-bottle-medical"></i>
+                        <i class="fa fa-desktop"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Order Medicine</h5>
-                        <p>Order medicines anytime anywhere, delivery in 15 mins or less</p>
-                    </div>
-                    <a href="/orderMedicine" class="text-custom">Order now <i class="mdi mdi-chevron-right"></i></a>
-                </div>
-            </div>
-            <!-- / -->
-            <!-- feaure box -->
-            <div class="col-sm-6 col-lg-4">
-                <div class="feature-box-1">
-                    <div class="icon">
-                        <i class="fa-regular fa-syringe"></i>
-                    </div>
-                    <div class="feature-content">
-                        <h5>Book a Test</h5>
-                        <p>Book any medical test from the comfort of your home.Samples will be collected from your home and reports within one day.</p>
-                    </div>
-                    <a href="/bookTest" class="text-custom">Book now <i class="mdi mdi-chevron-right"></i></a>
-                </div>
-            </div>
-            <!-- / -->
-            <!-- feaure box -->
-            <div class="col-sm-6 col-lg-4">
-                <div class="feature-box-1">
-                    <div class="icon">
-                     <i class="fa-solid fa-heart-pulse"></i>
-                    </div>
-                    <div class="feature-content">
-                        <h5>Book an Appoinment</h5>
-                        <p>Book an appinment to your nearest doctors available or consult them online anytime.</p>
-                        <a href="/bookAppoinment" class="text-custom">Book now <i class="mdi mdi-chevron-right"></i></a>
-                    </div>
-                </div>
-            </div>
-            <!-- / -->
-            <!-- feaure box -->
-            <div class="col-sm-6 col-lg-4">
-                <div class="feature-box-1">
-                    <i class="fa-solid fa-heart-pulse"></i>
-                    </div>
-                    <div class="feature-content">
-                        <h5>KIT-Protect</h5>
-                        <p>Secure the life of yourself and your loved ones with our complete health coverage benifits.</p>
-                        <a href="/insurance" class="text-custom">Go Protect <i class="mdi mdi-chevron-right"></i></a>
+                        <h5>Unique design</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                     </div>
                 </div>
             </div>
@@ -70,13 +29,12 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa-sharp fa-solid fa-users-medical"></i>
+                        <i class="fa fa-user"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Book a medical service</h5>
-                        <p>Book any type of medical service easily.</p>
+                        <h5>Different Layout</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                     </div>
-                    <a href="/bookService" class="text-custom">Book Now <i class="mdi mdi-chevron-right"></i></a>
                 </div>
             </div>
             <!-- / -->
@@ -84,17 +42,54 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa-solid fa-truck-medical"></i>
+                        <i class="fa fa-comment"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Instant Hospitalistaion </h5>
-                        <p>Book instant bed and facilities in your nearby hospital and superfast ambulance service 24x7</p>
+                        <h5>Make it Simple</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                     </div>
-                    <a href="/bookHospital" class="text-custom">Book Now <i class="mdi mdi-chevron-right"></i></a>
+                </div>
+            </div>
+            <!-- / -->
+            <!-- feaure box -->
+            <div class="col-sm-6 col-lg-4">
+                <div class="feature-box-1">
+                    <div class="icon">
+                        <i class="fa fa-image"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Responsiveness</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- / -->
+            <!-- feaure box -->
+            <div class="col-sm-6 col-lg-4">
+                <div class="feature-box-1">
+                    <div class="icon">
+                        <i class="fa fa-th"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Testing for Perfection</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- / -->
+            <!-- feaure box -->
+            <div class="col-sm-6 col-lg-4">
+                <div class="feature-box-1">
+                    <div class="icon">
+                        <i class="fa fa-cog"></i>
+                    </div>
+                    <div class="feature-content">
+                        <h5>Advanced Options</h5>
+                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                    </div>
                 </div>
             </div>
             <!-- / -->
         </div>
     </div>
 </section>
-<%- include("partials/footer"); -%>
