--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,20 +17,18 @@
 
           <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
             <li>
-              <a href="#" class="nav-link text-secondary">
+              <a href="/" class="nav-link text-secondary">
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#home"></use></svg>
                 Home
               </a>
             </li>
             <li>
-              <a href="/about">
-              <a href="#" class="nav-link text-white">
+              <a href="/about" class="nav-link text-white">
                 
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#speedometer2"></use></svg>
                 About us
               </a>
             </li>
-          </a>
             <li>
               <a href="#" class="nav-link text-white">
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#grid"></use></svg>
