--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
     <video autoplay muted loop id="bg-video">
         <source src="med.mp4" type="video/mp4">
       </video>
-        <h1>Home89699969996</h1>
+        <h1>Home</h1>
     
 
 </div>
