--- a/views/services.ejs
+++ b/views/services.ejs
@@ -6,8 +6,8 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="section-title">
-                    <h2>What I Do</h2>
-                    <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites</p>
+                    <h2>Our Services</h2>
+                    <p>Dscover our wide range of services which will protect you and your family always.</p>
                 </div>
             </div>
         </div>
@@ -16,12 +16,13 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa fa-desktop"></i>
+                        <i class="fa fa-medicine"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Unique design</h5>
-                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                        <h5>Order medicines</h5>
+                        <p>Order medicines anyttime,anywhere and get the delivery within 15 mins or less.</p>
                     </div>
+                    <a href="/order">Order now</a>
                 </div>
             </div>
             <!-- / -->
@@ -29,12 +30,13 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa fa-user"></i>
+                        <i class="fa fa-injection"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Different Layout</h5>
-                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                        <h5>Book a test</h5>
+                        <p>Book any medical test from your home. The samples will be collected from your home and the results within 1 day.</p>
                     </div>
+                    <a href="/bookTest">Book Now</a>
                 </div>
             </div>
             <!-- / -->
@@ -42,12 +44,13 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa fa-comment"></i>
+                        <i class="fa fa-doctor"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Make it Simple</h5>
-                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                        <h5>Book an Appoinment</h5>
+                        <p>Book an appoinment for a Doctor available near you. Any time 24x7.</p>
                     </div>
+                    <a href="/bookAppoinment">Emergency</a>
                 </div>
             </div>
             <!-- / -->
@@ -55,12 +58,13 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa fa-image"></i>
+                        <i class="fa fa-life"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Responsiveness</h5>
-                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                        <h5>KIT-PROTECT</h5>
+                        <p>Secure your health and your life alongwith your loved ones and go protect.</p>
                     </div>
+                    <a href="/insurance">Go protect</a>
                 </div>
             </div>
             <!-- / -->
@@ -68,12 +72,13 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa fa-th"></i>
+                        <i class="fa fa-tablets"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Testing for Perfection</h5>
-                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                        <h5>Book Medical Services</h5>
+                        <p>Book any medical services required near you instantly. availabe 24x7.</p>
                     </div>
+                    <a href="/medicalService">Book now</a>
                 </div>
             </div>
             <!-- / -->
@@ -81,12 +86,13 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa fa-cog"></i>
+                        <i class="fa fa-book"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Advanced Options</h5>
-                        <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                        <h5>What to do</h5>
+                        <p>Read about various medical cases and emergencies handeled by expert physicians arouns the world and learn about what to do in various emergency conditions</p>
                     </div>
+                    <a href="/blogs">Read now</a>
                 </div>
             </div>
             <!-- / -->
