small service change

--- a/views/services.ejs
+++ b/views/services.ejs
@@ -86,13 +86,13 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa fa-book"></i>
+                        <i class="fa-solid fa-hospital"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>What to do</h5>
-                        <p>Read about various medical cases and emergencies handeled by expert physicians arouns the world and learn about what to do in various emergency conditions</p>
+                        <h5>Instant Ambulance</h5>
+                        <p>Instant ambulance service and admission to your nearby hospital within 15 mins. Available 24x7.</p>
                     </div>
-                    <a href="/blogs">Read now</a>
+                    <a href="/emergency">Go now</a>
                 </div>
             </div>
             <!-- / -->
