--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -125,4 +125,14 @@ header{
   }
   
 
-
+  body {
+	background: #e68851;
+	background: linear-gradient(to right, #eff0f1, #52b0ee);
+  }
+  
+  .bg-image {
+	background-image: url('https://i.pinimg.com/564x/9f/32/20/9f3220f4535dd9cd9743b995fdfdeaa1.jpg');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+  }
