--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -44,7 +44,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link text-white">
+              <a href="/contactus" class="nav-link text-white">
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#people-circle"></use></svg>
                 Contact Us
               </a>
