--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -60,8 +60,12 @@
         </form>
 
         <div class="text-end">
-          <button type="button"class="btn btn-light text-dark me-2"><a href="/login">Login</a></button>
-          <button type="button" class="btn btn-light"><a href="/register">Sign-up</a></button>
+          <% if (loggedIn) { %>
+            <button type="button"class="btn btn-light text-dark me-2"><a href="/logout">logout</a></button>
+          <% } else { %>
+            <button type="button"class="btn btn-light text-dark me-2"><a href="/login">Login</a></button>
+            <button type="button" class="btn btn-light"><a href="/register">Sign-up</a></button>
+          <% } %>
         </div>
       </div>
     </div>
