--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -546,3 +546,35 @@ body{background-color:#eee;}
   color: #FFF;
   text-decoration:none;
 }
+
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.book-form {
+  width: 100%;
+  background-color: #ffffff;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.book-form:hover {
+  background-color: #45a049;
+}
+
+.book-div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
