--- a/views/bookTest.ejs
+++ b/views/bookTest.ejs
@@ -2,24 +2,43 @@
 
 <body>
 
-<h3>Using CSS to style an HTML Form</h3>
+<h3>Book your test</h3>
 
 <div class="book-div">
   <form action="">
     <label for="fname">First Name</label>
-    <input class="book-form"type="text" id="fname" name="firstname" placeholder="Your name..">
+    <input class="book"type="text" id="fname" name="firstname" placeholder="Your name..">
 
     <label for="lname">Last Name</label>
-    <input class="book-form"type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <input class="book"type="text" id="lname" name="lastname" placeholder="Your last name..">
 
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
+    <label for="adress">Adress</label>
+    <input class="book"type="text" id="Adress" name="Adress" placeholder="Your Adress..">
+
+    <label for="email">Email</label>
+    <input class="book"type="email" id="email" name="email" placeholder="Your Email..">
+
+    <label for="phone">Phone number</label>
+    <input class="book"type="text" id="phone" name="phone" placeholder="Your Phone no..">
+
+    <label for="age">Age</label>
+    <input class="book"type="text" id="age" name="age" placeholder="Your age..">
+
+    <label for="sex">Sex</label>
+    <select id="sex" name="sex">
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+      <option value="other">Other</option>
+    </select>
+
+    <label for="test">Test you waant to book</label>
+    <select id="sex" name="sex">
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+      <option value="other">Other</option>
     </select>
   
-    <input class="book-btn"type="submit" value="Submit">
+    <input class="book-form book-btn" type="submit" value="Submit">
   </form>
 </div>
 
