--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -546,9 +546,7 @@ body{background-color:#eee;}
   color: #FFF;
   text-decoration:none;
 }
-
-
-input[type=text], select {
+.book, select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -561,20 +559,25 @@ input[type=text], select {
 .book-form {
   width: 100%;
   background-color: #ffffff;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 14px 20px;
-  margin: 8px 0;
+  margin: auto;
+  width:100px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  display:flex;
+  display:grid;
 }
 
 .book-form:hover {
-  background-color: #45a049;
+  background-color: #2baeb8;
 }
 
 .book-div {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #ebefef;
   padding: 20px;
 }
+
+
