--- a/views/bookTest.ejs
+++ b/views/bookTest.ejs
@@ -1,45 +1,32 @@
 <%- include("partials/header"); -%>
 
-<body>
-
-<h3>Book your test</h3>
-
-<div class="book-div">
-  <form action="">
-    <label for="fname">First Name</label>
-    <input class="book"type="text" id="fname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Last Name</label>
-    <input class="book"type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    <label for="adress">Adress</label>
-    <input class="book"type="text" id="Adress" name="Adress" placeholder="Your Adress..">
-
-    <label for="email">Email</label>
-    <input class="book"type="email" id="email" name="email" placeholder="Your Email..">
-
-    <label for="phone">Phone number</label>
-    <input class="book"type="text" id="phone" name="phone" placeholder="Your Phone no..">
-
-    <label for="age">Age</label>
-    <input class="book"type="text" id="age" name="age" placeholder="Your age..">
-
-    <label for="sex">Sex</label>
-    <select id="sex" name="sex">
-      <option value="male">Male</option>
-      <option value="female">Female</option>
-      <option value="other">Other</option>
-    </select>
-
-    <label for="test">Test you waant to book</label>
-    <select id="sex" name="sex">
-      <option value="male">Male</option>
-      <option value="female">Female</option>
-      <option value="other">Other</option>
-    </select>
-  
-    <input class="book-form book-btn" type="submit" value="Submit">
-  </form>
+<div class="container-fluid px-1 py-5 mx-auto">
+  <div class="row d-flex justify-content-center">
+      <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
+          <h3>Request a Demo</h3>
+          <p class="blue-text">Just answer a few questions<br> so that we can personalize the right experience for you.</p>
+          <div class="card">
+              <h5 class="text-center mb-4">Powering world-class companies</h5>
+              <form class="form-card" onsubmit="event.preventDefault()">
+                  <div class="row justify-content-between text-left">
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">First name<span class="text-danger"> *</span></label> <input type="text" id="fname" name="fname" placeholder="Enter your first name" onblur="validate(1)"> </div>
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Last name<span class="text-danger"> *</span></label> <input type="text" id="lname" name="lname" placeholder="Enter your last name" onblur="validate(2)"> </div>
+                  </div>
+                  <div class="row justify-content-between text-left">
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Business email<span class="text-danger"> *</span></label> <input type="text" id="email" name="email" placeholder="" onblur="validate(3)"> </div>
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Phone number<span class="text-danger"> *</span></label> <input type="text" id="mob" name="mob" placeholder="" onblur="validate(4)"> </div>
+                  </div>
+                  <div class="row justify-content-between text-left">
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Job title<span class="text-danger"> *</span></label> <input type="text" id="job" name="job" placeholder="" onblur="validate(5)"> </div>
+                  </div>
+                  <div class="row justify-content-between text-left">
+                      <div class="form-group col-12 flex-column d-flex"> <label class="form-control-label px-3">What would you be using Flinks for?<span class="text-danger"> *</span></label> <input type="text" id="ans" name="ans" placeholder="" onblur="validate(6)"> </div>
+                  </div>
+                  <div class="row justify-content-end">
+                      <div class="form-group col-sm-6"> <button type="submit" class="btn-block btn-primary">Request a demo</button> </div>
+                  </div>
+              </form>
+          </div>
+      </div>
+  </div>
 </div>
-
-</body>
