--- a/views/bookTest.ejs
+++ b/views/bookTest.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header"); -%>
 
-<div class="container-fluid px-1 py-5 mx-auto">
+<div class="container-fluid px-1 py-5 mx-auto order">
   <div class="row d-flex justify-content-center">
       <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
           <h3>Request a Demo</h3>
