--- a/views/about.ejs
+++ b/views/about.ejs
@@ -136,7 +136,7 @@
                         <div class="bg-white rounded shadow-sm py-5 px-4"><img
                                 src="https://avatars.githubusercontent.com/u/89240074?v=4" alt="" width="100"
                                 class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm" />
-                            <h5 class="mb-0">Mrinmoy Das</h5><span class="small text-uppercase text-muted">CEO -
+                            <h5 class="mb-0">Mrinmay Das</h5><span class="small text-uppercase text-muted">CEO -
                                 Founder</span>
                             <ul class="social mb-0 list-inline mt-3">
                                 <li class="list-inline-item"><a href="#" class="social-link"><i
