hello name changes

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -75,7 +75,7 @@
                         <div class="bg-white rounded shadow-sm py-5 px-4"><img
                                 src="https://ci3.googleusercontent.com/proxy/mjn78E9wb3AFck0oVDB-KriRnFXFGwBSF1xEVQcwjcNksIbjuYLmSVBYyDSy6bx0RHMo7RVY_fYfvIE_fYl9-2Wf2R5I3ldR6dK3K56O=s0-d-e1-ft#https://avatars.githubusercontent.com/u/113161406?s=120&v=4" alt="" width="100"
                                 class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm" />
-                            <h5 class="mb-0">Supriyo Saha</h5><span class="small text-uppercase text-muted">CEO -
+                            <h5 class="mb-0">Supriya Saha</h5><span class="small text-uppercase text-muted">CEO -
                                 Founder</span>
                             <ul class="social mb-0 list-inline mt-3">
                                 <li class="list-inline-item"><a href="#" class="social-link"><i
