--- a/views/services.ejs
+++ b/views/services.ejs
@@ -50,7 +50,7 @@
                         <h5>Book an Appoinment</h5>
                         <p>Book an appoinment for a Doctor available near you. Any time 24x7.</p>
                     </div>
-                    <a href="/bookAppoinment">Emergency</a>
+                    <a href="/bookApp">Book now</a>
                 </div>
             </div>
             <!-- / -->
