--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -5,7 +5,7 @@
       <div class="card border-0 rounded-3 shadow-lg overflow-hidden">
         <div class="card-body p-0">
           <div class="row g-0">
-            <div class="col-sm-6 d-none d-sm-block bg-image"></div>
+            <div class="col-sm-6 d-none d-sm-block bg-image bg-contactimg"></div>
             <div class="col-sm-6 p-4">
               <div class="text-center">
                 <div class="h3 fw-light">Contact Form</div>
