--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,9 +38,9 @@
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link text-white">
+              <a href="/emergency" class="nav-link text-white">
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#people-circle"></use></svg>
-                Your Profile
+                Emergency
               </a>
             </li>
             <li>
