--- a/views/bookTest.ejs
+++ b/views/bookTest.ejs
@@ -27,7 +27,7 @@
                 </div>
                   
                   <div class="row justify-content-end">
-                      <div class="form-group col-sm-6"> <button type="submit" class="btn-block btn-primary">Submit</button> </div>
+                      <div class="form-group col-sm-6"> <button type="submit" class="btn-block btn-primary"><a role="button" href="/confirm">Submit</a></button> </div>
                   </div>
               </form>
           </div>
