--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -61,10 +61,10 @@
 
         <div class="text-end">
           <% if (loggedIn) { %>
-            <button type="button"class="btn btn-light text-dark me-2"><a href="/logout">logout</a></button>
+            <button type="button"class="btn btn-light text-dark me-2"><a href="/logout" style="text-decoration: none; color:black">logout</a></button>
           <% } else { %>
-            <button type="button"class="btn btn-light text-dark me-2"><a href="/login">Login</a></button>
-            <button type="button" class="btn btn-light"><a href="/register">Sign-up</a></button>
+            <button type="button"class="btn btn-light text-dark me-2"><a href="/login" style="text-decoration: none; color:black">Login</a></button>
+            <button type="button" class="btn btn-light"><a href="/register" style="text-decoration: none; color:black">Sign-up</a></button>
           <% } %>
         </div>
       </div>
