--- a/views/emergency.ejs
+++ b/views/emergency.ejs
@@ -16,7 +16,7 @@
                   </div>
                   
                   <div class="row justify-content-end">
-                      <div class="form-group col-sm-6"> <button type="submit" class="btn-block btn-primary">Submit</button> </div>
+                    <div class="form-group col-sm-6"> <button type="submit" class="btn-block btn-primary"><a role="button" href="/confirm2" style="text-decoration: none; color:black">Submit</a></button> </div>
                   </div>
               </form>
           </div>
