--- a/views/services.ejs
+++ b/views/services.ejs
@@ -22,7 +22,7 @@
                         <h5>Order medicines</h5>
                         <p>Order medicines anyttime,anywhere and get the delivery within 15 mins or less.</p>
                     </div>
-                    <a href="/order" style="text-decoration: none; color:black">Order now</a>
+                    <button><a href="/order" style="text-decoration: none; color:black">Order now</a></button>
                 </div>
             </div>
             <!-- / -->
@@ -36,7 +36,7 @@
                         <h5>Book a test</h5>
                         <p>Book any medical test from your home. The samples will be collected from your home and the results within 1 day.</p>
                     </div>
-                    <a href="/bookTest" style="text-decoration: none; color:black">Book Now</a>
+                <button><a href="/bookTest" style="text-decoration: none; color:black">Book Now</a></button>
                 </div>
             </div>
             <!-- / -->
@@ -50,7 +50,7 @@
                         <h5>Book an Appoinment</h5>
                         <p>Book an appoinment for a Doctor available near you. Any time 24x7.</p>
                     </div>
-                    <a href="/bookApp" style="text-decoration: none; color:black">Book now</a>
+                <button><a href="/bookApp" style="text-decoration: none; color:black">Book now</a></button>
                 </div>
             </div>
             <!-- / -->
@@ -64,7 +64,7 @@
                         <h5>KIT-PROTECT</h5>
                         <p>Secure your health and your life alongwith your loved ones and go protect.</p>
                     </div>
-                    <a href="/insurance" style="text-decoration: none; color:black">Go protect</a>
+                <button> <a href="/insurance" style="text-decoration: none; color:black">Go protect</a></button>
                 </div>
             </div>
             <!-- / -->
@@ -78,7 +78,7 @@
                         <h5>Book Medical Services</h5>
                         <p>Book any medical services required near you instantly. availabe 24x7.</p>
                     </div>
-                    <a href="/medicalService" style="text-decoration: none; color:black">Book now</a>
+                <button> <a href="/medicalService" style="text-decoration: none; color:black">Book now</a></button>
                 </div>
             </div>
             <!-- / -->
@@ -92,7 +92,7 @@
                         <h5>Instant Ambulance</h5>
                         <p>Instant ambulance service and admission to your nearby hospital within 15 mins. Available 24x7.</p>
                     </div>
-                    <a href="/emergency" style="text-decoration: none; color:black">Go now</a>
+                <button> <a href="/emergency" style="text-decoration: none; color:black">Go now</a></button>
                 </div>
             </div>
             <!-- / -->
