--- a/views/insurance.ejs
+++ b/views/insurance.ejs
@@ -112,7 +112,7 @@
                   </div>
                
                   <div class="generic_price_btn clearfix">
-                    <a class="life" href="/goLife">Go Protect</a>
+                    <a class="life" href="/goHealth">Go Protect</a>
                   </div>
                   
                   
@@ -166,7 +166,7 @@
                   
                   
                   <div class="generic_price_btn clearfix">
-                    <a class="totalCoverage" href="/totalCoverage">Go Protect</a>
+                    <a class="totalCoverage" href="/goHealth">Go Protect</a>
                   </div>
                   
                   
