--- a/views/about.ejs
+++ b/views/about.ejs
@@ -26,7 +26,7 @@
                         src="https://img.lovepik.com/photo/50064/6803.jpg_wh300.jpg" alt="" class="img-fluid" />
                      </div>
                     <div >
-                        <Body br ="https://static.vecteezy.com/system/resources/thumbnails/006/712/985/small/abstract-health-medical-science-healthcare-icon-digital-technology-science-concept-modern-innovation-treatment-medicine-on-hi-tech-future-blue-background-for-wallpaper-template-web-design-vector.jpg">
+                        <Body br ="https://static.vecteezy.com/system/resources/thumbnails/006/712/985/small/abstract-health-medical-science-healthcare-icon-digital-technology-science-concept-modern-innovation-treatment-medicine-on-hi-tech-future-blue-background-for-wallpaper-template-web-design-vector.jpg" style="margin-top: 0;">
 
                         </Body>
                     </div>
