--- a/views/medicalService.ejs
+++ b/views/medicalService.ejs
@@ -22,9 +22,19 @@
                   <div class="row justify-content-between text-left">
                       <div class="form-group col-12 flex-column d-flex"> <label class="form-control-label px-3">Your requirements<span class="text-danger"> *</span></label> <input type="text" id="req" name="req" placeholder="requirements in brief" onblur="validate(6)"> </div>
                   </div>
-                  <div class="row justify-content-between text-left">
-                    <div class="form-group col-12 flex-column d-flex"> <label class="form-control-label px-3">Medical service you want<span class="text-danger"> *</span></label> <input type="text" id="sp" name="sp" placeholder="Medical service you want" onblur="validate(7)"> </div>
-                </div>
+                  <div class="form-group col-sm-6 flex-column d-flex"><label class="form-control-label px-3">Service you want<span class="text-danger"> *</span></label>
+                    <select
+                            class="form-group col-12 flex-column d-flex"
+                            
+                          >
+                            <option selected>Select the service you want</option>
+        
+                            <option value="1">Nurse</option>
+                            <option value="2">Physcio therapy</option>
+                            <option value="3">Maid</option>
+                            <option value="4">Injections</option>
+                            <option value="5">Other medical help</option>
+                          </select>
                   
                   <div class="row justify-content-end">
                     <div class="form-group col-sm-6"> <button type="submit" class="btn-block btn-primary"><a role="button" href="/confirm" style="text-decoration: none; color:black">Submit</a></button> </div>
