temporarily removed the vdo

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,8 @@
 <%- include("partials/header"); -%>
 <div class="home">
-    <video autoplay muted loop id="bg-video">
+    <!-- <video autoplay muted loop id="bg-video">
         <source src="med.mp4" type="video/mp4">
-      </video>
+      </video> -->
         <div class="col-lg-5 d-none d-lg-block ">
         <h1 text-align  ><b> Welcome to KIT-HEALTH </b></h1>
         <h2 mb- 0 ><b><i> A Quick tour  of our website :  </i></b></h2>
