--- a/views/bookTest.ejs
+++ b/views/bookTest.ejs
@@ -28,6 +28,7 @@
                   <div class="form-group col-sm-6 flex-column d-flex"><label class="form-control-label px-3">Test you want <span class="text-danger"> *</span></label>
                   <select
                           class="form-group col-12 flex-column d-flex"
+                          name="test"
                           
                         >
                           <option selected>Select the test you want</option>
