--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,11 +31,11 @@
               <p class="text-center fw-bold mx-3 mb-0">Or</p>
             </div>
   
-            <!-- Email input -->
+            <!-- User input -->
             <div class="form-outline mb-4">
-              <input type="email" class="form-control form-control-lg"
-                placeholder="Enter a valid email address" name="username" />
-              <label class="form-label" for="email">Email address</label>
+              <input type="text" class="form-control form-control-lg"
+                placeholder="Enter a valid username" name="username" />
+              <label class="form-label" for="username">Username</label>
             </div>
   
             <!-- Password input -->
@@ -44,10 +44,6 @@
                 placeholder="Enter password" name="password" />
               <label class="form-label" for="password">Password</label>
             </div>
-  
-            <!-- <div class="d-flex justify-content-between align-items-center">
-              <a href="#!" class="text-body">Forgot password?</a>
-            </div> -->
   
             <div class="text-center text-lg-start mt-4 pt-2">
               <button type="submit" class="btn btn-primary btn-lg"
