--- a/views/register.ejs
+++ b/views/register.ejs
@@ -53,7 +53,7 @@
                       <label class="form-check-label" for="t&c">
                         I agree all statements in <a href="#!">Terms of service</a>
                       </label>
-                    </div> -->
+                    </div>
   
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                       <button type="submit" class="btn btn-primary btn-lg">Register</button>
