--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -55,7 +55,7 @@
     </div>
     <div class="px-3 py-2 border-bottom mb-3">
       <div class="container d-flex flex-wrap justify-content-center">
-        <div class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto"></div>
+        <div class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto"> <img src="https://i.pinimg.com/originals/2b/32/b5/2b32b59dbfc427812eef579985234524.gif" alt=""   width="153" height="115" ></div>
 
         <div class="text-end">
           <% if (loggedIn) { %>
