--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,11 +8,11 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">Welcome to KIT-HEALTH <br><span class="text-muted">It is a one stop solution for all medical help</span></h2>
-        <p class="lead">We strive to stand behind every person during their emergency and make sure that they receive highest quality medical facilities from the comfort of their home. We at KIT-HEALTH believe that every person has the right to receive best  medical attention irespective of any differences</p>
+        <h2 class="featurette-heading fw-normal lh-1">&emsp; &emsp; &emsp;Welcome to KIT-HEALTH <br><span class="text-muted">It is a one stop solution for all medical help</span></h2>
+        <p class="lead"> We strive to stand behind every person during their emergency and make sure that they receive highest quality medical facilities from the comfort of their home. We at KIT-HEALTH believe that every person has the right to receive best  medical attention irespective of any differences</p>
       </div>
       <div class="col-md-5">
-        <img src="https://i.pinimg.com/originals/b8/23/e3/b823e38cc01fdb9278b6f7faa2feda6d.gif" alt="" width="500" height="320">
+        <img src="https://i.pinimg.com/originals/b8/23/e3/b823e38cc01fdb9278b6f7faa2feda6d.gif" alt="" width="250" height="160">
       </div>
     </div>
 
