--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">&emsp; &emsp; &emsp;Welcome to KIT-HEALTH <br><span class="text-muted">It is a one stop solution for all medical help</span></h2>
+        <h2 class="featurette-heading fw-normal lh-1">&emsp; &emsp; &emsp;Welcome to KIT-HEALTH <br><br><span class="text-muted">It is a one stop solution for all medical help</span></h2>
         <p class="lead"> We strive to stand behind every person during their emergency and make sure that they receive highest quality medical facilities from the comfort of their home. We at KIT-HEALTH believe that every person has the right to receive best  medical attention irespective of any differences</p>
       </div>
       <div class="col-md-5">
@@ -21,7 +21,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h3 class="featurette-heading fw-normal lh-1">Why chose us ?</h3>
-        <p class="lead">We have one of the fastest network of emergency services and 24 * 7 availability of doctors who are fully equiped to deal with any emergency situations . Moreover we have our own online  pharmaceutical store with a wide range of medicines available and one of the fastest delivery services. Additionally we also have online appointment facility where one can book an appointment with the doctor of his/her choice from comfort of their homes.</p>
+        <br><p class="lead">We have one of the fastest network of emergency services and 24 * 7 availability of doctors who are fully equiped to deal with any emergency situations . Moreover we have our own online  pharmaceutical store with a wide range of medicines available and one of the fastest delivery services. Additionally we also have online appointment facility where one can book an appointment with the doctor of his/her choice from comfort of their homes.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img src="https://www.bioagilytix.com/wp-content/uploads/2022/09/09.optimized.gif" alt="" width="250" height="150">
@@ -32,7 +32,7 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1"> The facilities which we offer to our users are :</h2>
+        <h2 class="featurette-heading fw-normal lh-1"> The facilities which we offer to our users are :</h2><br>
         <ol>
               <li><b> We have the most updated equipments to run all kinds of tests and users can get their reports within minimal time </b></li>
               <li> <b>The health of our patients is our top priority so we always provide emergency services and an constantly active network for their convenience </b></li>
