--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,46 @@
     <video autoplay muted loop id="bg-video">
         <source src="med.mp4" type="video/mp4">
       </video>
-        <h1>Home</h1>
+        <div class="col-lg-5 d-none d-lg-block ">
+        <h1 text-align  ><b> Welcome to KIT-HEALTH </b></h1>
+        <h2 mb- 0 ><b><i> A Quick tour  of our website :  </i></b></h2>
+        </div>
+        <div class="col-lg-5">
+          <h1><b> Our Motto </b></h1>
+          <p class="lead text-muted mb-0"><b> We strive to stand behind every person during their emergency and make sure that they receive highest quality medical facilities from the comfort of their home. We at KIT-HEALTH believe that every person has the right to receive best  medical attention ireespective of any differences .</b></p>
+        </div>
+        <div class="col-lg-5" align-items-right ><img align-items-right 
+          src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/3229481/online-medicine-delivery-clipart-xl.png" alt="" class="img-fluid"  />
+        </div>
+      </div>
+      <div >
+          <Body br ="https://static.vecteezy.com/system/resources/thumbnails/006/712/985/small/abstract-health-medical-science-healthcare-icon-digital-technology-science-concept-modern-innovation-treatment-medicine-on-hi-tech-future-blue-background-for-wallpaper-template-web-design-vector.jpg">
+
+          </Body>
+      </div>
+      <div class="col-lg-6 d-none d-lg-block ">
+         <h1 text-align : center><b> Why chose us ? </b></h1>
+         <p class="lead text-muted mb-0"><b> We have one of the fastest network of emergency services and 24 * 7 availability of doctors who are fully equiped to deal with any emergency situations . Moreover we have our own online  pharmaceutical store with a wide range of medicines available and one of the fastest delivery services. Additionally we also have online appointment facility where one can book an appointment with the doctor of his/her choice from comfort of their homes. </b></p> 
+
+      </div>
+      <div class="col-lg-5" align-items-right mb -2><img  align-items-right
+         src="https://cdn.dribbble.com/users/1129235/screenshots/11486186/media/4102dce7cb110615007154a9fa34d2e1.gif" alt="" class="img-fluid"  />
+      </div>
+      
+
+
+       
+
+
+      </div>
+
+
+
+
+
+
+
+
     
 
 </div>
